# AICF

./: .gitignore  ACIF.html  ACIF_Sim.html  Evaluation of the AICF Repository Against the Tier Framework.docx  LICENSE  README.md  formalism_repair_v1.md  pyproject.toml  quickstart_guide.md
aicf/: __init__.py
aicf/fitting/: __init__.py
aicf/model/: __init__.py  coupling.py  dynamical.py  flow_model.py  inferential.py  informational.py  reduced_models.py
aicf/simulation/: __init__.py  engine.py  parameter_sweep.py  predictions.py
aicf/visualization/: __init__.py
scripts/: run_simulations.py
tests/: test_dimensional_consistency.py  test_dynamical.py  test_flow_model.py  test_inferential.py  test_informational.py  test_simulation.py
