[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicf-flow-model"
version = "0.1.0"
description = "Active Inference–Complexity Model of Flow"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aicf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
